# odh.mcp

./: PLAN.md  README.md  pyproject.toml
odh_mcp/: cli.py  config.py  models.py  notebook.py  server.py
